--- a/css/style.css
+++ b/css/style.css
@@ -8,10 +8,23 @@
     padding: 0;
     border: none;
 }
+a {
+    color: inherit;
+    text-decoration: none;
+}
 /* reset end */
 body {
+    --page-bg-color: #f7f4e6;
+    --text-color: #000;
+    --desc-text-color: #555;
     height: 100vh;
-    background-color: #f7f4e6;
+    color: var(--text-color);
+    background-color: var(--page-bg-color);
+}
+body.dark {
+    --page-bg-color: #202124;
+    --text-color: #ddd;
+    --desc-text-color: #9e9e9e;
 }
 /* 页面 loading 样式 start */
 body.loading {
@@ -28,8 +41,17 @@ body.loading::after {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(45deg, var(--stripe-color-one) 25%, var(--stripe-color-two) 25%, var(--stripe-color-two) 50%, var(--stripe-color-one) 50%,var(--stripe-color-one) 75%, var(--stripe-color-two) 75%);
+    background: linear-gradient(
+        45deg,
+        var(--stripe-color-one) 25%,
+        var(--stripe-color-two) 25%,
+        var(--stripe-color-two) 50%,
+        var(--stripe-color-one) 50%,
+        var(--stripe-color-one) 75%,
+        var(--stripe-color-two) 75%
+    );
     background-size: var(--stripe-width) var(--stripe-width);
+    will-change: background-position;
     animation: backgroudScroll 1s linear infinite;
 }
 @keyframes backgroudScroll {
@@ -57,8 +79,6 @@ main {
 .container a {
     position: relative;
     margin: 0 5px;
-    color: inherit;
-    text-decoration: none;
 }
 .container a::after {
     content: "";
@@ -82,12 +102,12 @@ footer {
     right: 25px;
     bottom: 20px;
     font-size: 14px;
-    color: #555;
+    color: var(--desc-text-color);
 }
 footer .site_name {
     margin-bottom: 10px;
     font-size: 20px;
-    color: #000;
+    color: var(--text-color);
 }
 footer .update {
     margin-bottom: 4px;
